fixing deployment issue pt 6