@@ -6,6 +6,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -14,7 +15,13 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(List.of("https://*.vercel.app"));
+        cfg.setAllowedOriginPatterns(Arrays.asList(
+                "https://*.vercel.app",
+                "https://aura-front-8yzq269p1-waldo1234567s-projects.vercel.app",
+                "https://aura-front-wine.vercel.app/",
+                "http://localhost:3000",
+                "http://127.0.0.1:3000"
+        ));
         cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
         cfg.setAllowedHeaders(List.of("*"));
         cfg.setAllowCredentials(true);
